django_app.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: djangoapp-deployment
  labels:
    app   : django-application
    owner : Aleksei_Ushakov
spec:
  selector:
    matchLabels:
      project: djangoapp
  template:
    metadata:
      labels:
        project: djangoapp # this label search service
    spec:
      containers:
        - name  : container-djangoapp
          image : django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
