services.yaml
apiVersion: v1
kind: Service
metadata:
  name : deployment-service
  labels:
    env   : prod
    owner : Aleksei_Ushakov
spec:
  selector  :
    project : djangoapp # select PODs with this labels
  ports:
    - name       : app-listener
      protocol   : TCP
      port       : 80 # port on ClusterIP
      targetPort : 80 # port on POD
  type: ClusterIP
