network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  ingressClassName: ingress-router
  rules:
  - host: www.star-burger.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: djangoapp
            port:
              number: 8080
